Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; load the images; be sure to also preprocess these into tensors."
+    "#Your code here; load the images; be sure to also preprocess these into tensors.\n"
    ]
   },
   {
