Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; load the images; be sure to also preprocess these into tensors.\n"
+    "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
+    "!ls /da"
    ]
   },
   {
