Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,12 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chest_xray_all_data.h5\t\t\t\t  CONTRIBUTING.md\r\n",
+      "chest_xray_all_with_augmentation_data.h5\t  index_files\r\n",
+      "chest_xray_downsampled\t\t\t\t  index.ipynb\r\n",
+      "chest_xray_downsampled_data.h5\t\t\t  LICENSE.md\r\n",
+      "chest_xray_downsampled_with_augmentation_data.h5  README.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
-    "!ls /da"
+    "!ls"
    ]
   },
   {
