--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
    ],
    "source": [
     "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
-    "!ls"
+    "!ls chest_xray_all"
    ]
   },
   {
