--- a/index.ipynb
+++ b/index.ipynb
@@ -30,24 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chest_xray_all_data.h5\t\t\t\t  CONTRIBUTING.md\r\n",
-      "chest_xray_all_with_augmentation_data.h5\t  index_files\r\n",
-      "chest_xray_downsampled\t\t\t\t  index.ipynb\r\n",
-      "chest_xray_downsampled_data.h5\t\t\t  LICENSE.md\r\n",
-      "chest_xray_downsampled_with_augmentation_data.h5  README.md\r\n"
+      "ls: cannot access 'chest_xray_all_data': No such file or directory\r\n"
      ]
     }
    ],
    "source": [
     "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
-    "!ls chest_xray_all"
+    "!ls che"
    ]
   },
   {
