Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,20 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ls: cannot access 'chest_xray_all_data/': No such file or directory\r\n"
+      "ls: cannot access 'chest_xray_all_data.h5/': Not a directory\r\n"
      ]
     }
    ],
    "source": [
     "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
-    "!ls chest_xray_all_data.h5/\n"
+    "!ls chest_xray_all_data.h5/"
    ]
   },
   {
