Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,8 +42,13 @@
     }
    ],
    "source": [
-    "#Your code here; load the images; be sure to also preprocess these into tensors.\n",
-    "!ls chest_xray_all_data.h5/"
+    "#Your code here; load the images; \n",
+    "be sure to also preprocess these into tensors.\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import datetime\n",
+    "\n",
+    "original_start = datetime.datetime.now()\n",
+    "start = datetime.datetime.now()\n"
    ]
   },
   {
