Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,20 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ls: cannot access 'chest_xray_all_data.h5/': Not a directory\r\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
    "source": [
     "#Your code here; load the images; \n",
-    "be sure to also preprocess these into tensors.\n",
+    "#be sure to also preprocess these into tensors.\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import datetime\n",
     "\n",
