--- a/index.ipynb
+++ b/index.ipynb
@@ -53,9 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1738 images belonging to 2 classes.\n",
+      "Found 4 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "train_dir = 'chest_xray_downsampled/train'\n",
     "validation_dir = 'chest_xray_downsampled/val/'\n",
