Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,11 +104,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; design and compile the model"
+    "#Your code here; design and compile the model\n",
+    "from keras import layers\n",
+    "from keras import models\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "                        input_shape=(150, 150, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(512, activation='relu'))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n"
    ]
   },
   {
