Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,6 +128,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import optimizers\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy',\n",
+    "              optimizer=optimizers.RMSprop(lr=1e-4),\n",
+    "              metrics=['acc'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
