--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set the model to train; see warnings above"
+    "#Set the model to train; see warnings above\n",
+    "history = model.fit_generator(\n",
+    "      train_generator,\n",
+    "      steps_per_epoch=100,\n",
+    "      epochs=30,\n",
+    "      validation_data=validation_generator,\n",
+    "      validation_steps=50)"
    ]
   },
   {
